* type=config-size - extend for snippet
* class Interfacecontainer - extend warning with XML object information - relevant for CloudManagement object-variable validation
* type=device | introduce 'filter=(devicegroup has.vsys XYZ)' - extend output for actions=display
* type=rule | introduce 'actions=display-app-seen'
* type=gcp | improve actions=upload/download

BUGFIX:
* type=rule ruletype=decryption | introduce category reading
* class SecurityRule | bugfix to correctly cleanup XML node 'profile-setting', if no SecurityProfile/SecurityProfileGroup is set

GENERAL:
* cleanup alias.sh - remove deprecated util scripts which are directly supported with alias "pan-os-php type=XYZ"
* general update dynamic content version to 8690-7941


2.0.74 (20230315)
UTIL:
* type=securityprofile 'actions=custom-url-category-add-ending-token:/*' - add support for token '/*
* type=securityprofile | introduce actions=custom-url-category-remove-ending-token - 'custom-url-category-remove-ending-token:*' - '*' can only be added if '/' is last char
* type=rule actions=display shadow-json - improve output if source/destination isAny()
* type=custom-report | introduce new utility
* type=device | introduce 'filter=(name is.child.of DGNAME)'
* type=UTIL_merger scripts | extend with argument listfilters
* type=securityprofile actions=url-filtering-action-set:alert,CUSTOMURL - support customURL and not only predefined URL

BUGFIX:
* type=zone | actions=display bugfix
* type=securityprofile securityprofiletype=custom-url-category 'actions=custom-url-category-add-ending-token:*'  - fix for token '*' to not skip

GENERAL:
* bugfixes for PHP version 8.2 - 'PHP Deprecated:  Creation of dynamic property'
* class AppFilter / CallContext - improvement for PHP 8.2
* remove deprecated utilities scripts
* update util actions/filter files
* class TAG - improve PHPdoc - methods/variable declaration
* general - use 'XML_PARSE_BIG_LINES' on all classes where XMLfile is load
* update predefined to 8685-7918

